Current

Fixed: JCommander would sometimes just print a stack trace and continue, now rethrowing.

1.7
2010/09/06

Added: Command usages are now shown in the order they were added to the JCommander object
Fixed: JCommander now compatible with Java 5
Fixed: Minor bug in the command display (Marc Ende)

1.6
2010/08/28

Added: @Parameters(commandDescription = "command description")
Added: now throwing an exception if required main parameters are not supplied
Fixed: usage() was changing default values after two runs (jstrachan)

1.5
2010/08/15

Added: overloaded versions of usage() with StringBuilders
Added: inheritance support (Guillaume Sauthier)
Added: support for commands (e.g. "main add --author=cbeust Foo.java")
Added: support for converters for main parameters (e.g. List<HostPort>).

1.4
2010/07/28

Added: string converter factories
Added: IDefaultProvider
Added: PropertyFileDefaultProvider
Added: Usage is now showing required parameters and default value
Added: Support for values that look like parameters ("-integer -3", "/file /tmp/a")
Added: @Parameters(optionPrefixes) to allow for different prefixes than "-"

1.2
2010/07/25

Usage is now aligned and alphabetically sorted
Added the hidden attribute
Added support for different separators than " " (e.g. "=").
Deprecated @ResourceBundle, replaced with @Parameters

1.1
2010/08/15

Better internationalization
Password support
Type converters
